# zen_knit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.rst  publish.sh  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml
doc/example/: MakeFile  Makefile  demo.py  example.db  html_example.html  html_example.pyz  html_example_1.py  html_example_2.pyz  html_sql.pyz  html_sql_1.py  html_sql_2.pyz  html_with_http_css.pyz  html_with_http_css_1.py  html_with_http_css_2.pyz  html_with_local_css.pyz  html_with_local_css_1.py  html_with_local_css_2.pyz  my_css.css  pdf_example.pyz  pdf_example_1.py  pdf_example_2.pyz  pdf_full_1.py  pdf_full_2.pyz  pdf_sql.pyz  pdf_sql_1.py  pdf_sql_2.pyz
doc/example/demo/: html_example.html  html_python.html  html_sql.html  html_with_http_css.html  html_with_local_css.html
doc/publish_example/0-python-dashboard/: README.md  config.yml  run.py  uwsgi.ini
doc/publish_example/0-python-dashboard/app/: database.db  views.py
doc/publish_example/1-just-csv/: config.yml  test.csv
doc/publish_example/10-golemexample-master/: .Rbuildignore  DESCRIPTION  NAMESPACE  NEWS.md  README.Rmd  README.md  config.yml  golem-config.yml  run_zenreport.R
doc/publish_example/10-golemexample-master/R/: app_config.R  app_server.R  app_ui.R  mod_my_fifth_module.R  mod_my_first_module.R  mod_my_fourth_module.R  mod_my_other_module.R  mod_my_third_module.R  run_app.R
doc/publish_example/10-golemexample-master/data/: dataset.rda  plop.rda
doc/publish_example/10-golemexample-master/data-raw/: dataset.R
doc/publish_example/10-golemexample-master/dev/: 01_start.R  02_dev.R
doc/publish_example/10-golemexample-master/man/: mod_my_fifth_module.Rd  mod_my_fourth_module.Rd  mod_my_other_module.Rd  mod_my_third_module.Rd  run_app.Rd
doc/publish_example/10-golemexample-master/tests/: testthat.R
doc/publish_example/11-r-pdf/: config.yml  test.Rmd
doc/publish_example/12-Regression-master/: config.yml  server.R  ui.R
doc/publish_example/2-just-image/: config.yml
doc/publish_example/3-jupyter-notebook-python/: config.yml  example.ipynb
doc/publish_example/4-just-json/: config.yml  test.json
doc/publish_example/5-just-pdf/: config.yml
doc/publish_example/6-just-yml/: config.yml  test.yml
doc/publish_example/7-streamlit-dataview-master/: config.yml
doc/publish_example/8-r-html/: config.yml
doc/publish_example/9-r-html-2/: config.yml  corona.Rmd  corona.md
plugins/vscode-zen-knit/: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
plugins/vscode-zen-knit/src/: extension.ts
tests/: test_zen_knit.py
zen_knit/: cli.py  publish_cli.py
zen_knit/data_types/: __init__.py
zen_knit/executor/: __init__.py
zen_knit/formattor/: __init__.py  base_formatter.py  html_formatter.py  markdown_formtter.py  tex_formatter.py
zen_knit/formattor/html_support/: __init__.py
zen_knit/organizer/: __init__.py
zen_knit/parser/: __init__.py
zen_knit/publish/core/: publish.py  worker.py
zen_knit/publish/support/: cred.py
zen_knit/reader/: __init__.py
(+11 files in other folders)
