[tool.poetry]
name = "zen_knit"
version = "0.1.6"
description = "Zen-Knit is a formal (PDF), informal (HTML) report generator for data analyst and data scientist who wants to use python. Inspired from Pweave. "
authors = ["Zen <zenreportz@protonmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/Zen-Reportz/zen_knit"
repository = "https://github.com/Zen-Reportz/zen_knit"
include = [
    "LICENSE",
]


[tool.poetry.dependencies]
python = ">=3.7,<4.0"
ipython = ">=7.0"
pydantic = "^1.8.2"
jupyter-client = "^7.1.0"
click = "^8.0.3"
nbformat = "^5.1.3"
nbconvert = ">=6.0.0"
Markdown = "^3.3.6"
ipykernel = ">=6.0.0"



[tool.poetry.scripts]
knit = "zen_knit.cli:knit"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
docutils = "^0.18.1"
pandas = ">1.0.0"
twine = "^3.7.1"
plotly = "^5.5.0"
bokeh = "^2.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
