[tool.poetry]
name = "zen_knit"
version = "0.2.2"
description = "Zen-Knit is a formal (PDF), informal (HTML) report generator for data analyst and data scientist who wants to use python. Rmarkdown Alternative for Python"
authors = ["Zen <zenreportz@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Zen-Reportz/zen_knit"
repository = "https://github.com/Zen-Reportz/zen_knit"
include = [
    "LICENSE",
]


[tool.poetry.dependencies]
python = ">=3.7,<4.0"
ipython = ">=7.0"
pydantic = "^1.8.2"
jupyter-client = "^7.1.0"
click = "^8.0.3"
nbformat = "^5.1.3"
nbconvert = ">=6.0.0"
Markdown = "^3.3.6"
ipykernel = ">=6.0.0"
SQLAlchemy = "^1.4.29"
joblib = "^1.1.0"
oyaml = "^1.0"



[tool.poetry.scripts]
knit = "zen_knit.cli:knit"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
docutils = "^0.18.1"
pandas = ">1.0.0"
twine = "^3.7.1"
plotly = "^5.5.0"
bokeh = "^2.4.2"
matplotlib = "^3.5.1"

[build-system]
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
build-backend = "poetry.core.masonry.api"